# crypto-assignment

./: Dockerfile  README.md
lootag-cryptoassignment-domain/: Cargo.toml
lootag-cryptoassignment-domain/src/: credentials.rs  currency_amount.rs  fee_set.rs  leverage.rs  lib.rs  margin.rs  open_order.rs  open_order_description.rs  server_time.rs  user.rs  xbt_usd.rs
lootag-cryptoassignment-e2e/: Cargo.toml
lootag-cryptoassignment-e2e/tests/: kraken_service.rs
lootag-cryptoassignment-e2e/tests/features/: kraken_service.feature
lootag-cryptoassignment-services/: Cargo.toml
lootag-cryptoassignment-services/src/: dto.rs  lib.rs  nonce.rs  payload.rs  uri.rs  web_request.rs
