[package]
name = "lootag-cryptoassignment-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lootag-cryptoassignment-domain = { path = "../lootag-cryptoassignment-domain"}
ring="0.16.20"
sha2="0.10.2"
base64="0.13.0"
reqwest="0.10.0"
